--- a/assets/style.css
+++ b/assets/style.css
@@ -26,7 +26,7 @@
 }
 
 /* Links inside the dropdown */
-.dropdown-content a {
+.dropdown-content option {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
@@ -34,7 +34,7 @@
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd}
+.dropdown-content option:hover {background-color: #ddd}
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
